RESOLVED FIXED185779
Handle failure to extend sandbox gracefully
https://bugs.webkit.org/show_bug.cgi?id=185779
Summary Handle failure to extend sandbox gracefully
Eric Carlson
Reported 2018-05-18 12:11:34 PDT
Handle failure to extend sandbox gracefully
Attachments
Patch (26.53 KB, patch)
2018-05-18 12:28 PDT, Eric Carlson
no flags
Fix test results (1.50 KB, patch)
2018-05-18 15:12 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2018-05-18 12:12:25 PDT
Eric Carlson
Comment 2 2018-05-18 12:28:12 PDT
Brent Fulgham
Comment 3 2018-05-18 12:45:25 PDT
Comment on attachment 340729 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=340729&action=review Looks great! r=me > Source/WebKit/UIProcess/UserMediaProcessManager.cpp:186 > + UNUSED_PARAM(proxy); You probably don't need UNUSED_PARAM here, since proxy is used below.
WebKit Commit Bot
Comment 4 2018-05-18 13:13:40 PDT
Comment on attachment 340729 [details] Patch Clearing flags on attachment: 340729 Committed r231979: <https://trac.webkit.org/changeset/231979>
WebKit Commit Bot
Comment 5 2018-05-18 13:13:42 PDT
All reviewed patches have been landed. Closing bug.
Dawei Fenton (:realdawei)
Comment 6 2018-05-18 14:57:38 PDT
The API test added with this change is failing regularly: MediaCaptureSimulateFailedSandbox.Test https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20%28Tests%29/builds/5462/steps/run-api-tests/logs/stdio /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/UserMediaSimulateFailedSandbox.mm:139 Value of: "AbortError,Unable to extend sandbox" Expected: [error UTF8String] Which is: "AbortError,Unable to extend sandbox."
Eric Carlson
Comment 7 2018-05-18 15:12:02 PDT
Reopening to attach new patch.
Eric Carlson
Comment 8 2018-05-18 15:12:03 PDT
Created attachment 340743 [details] Fix test results
WebKit Commit Bot
Comment 9 2018-05-18 16:32:42 PDT
Comment on attachment 340743 [details] Fix test results Clearing flags on attachment: 340743 Committed r231992: <https://trac.webkit.org/changeset/231992>
WebKit Commit Bot
Comment 10 2018-05-18 16:32:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.